--- a/src/sass/blocks/_button.scss
+++ b/src/sass/blocks/_button.scss
@@ -3,8 +3,16 @@
   background: $main-color;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   padding: 12px 25px;
+  &:hover {
+    background-color: #c70000;
+    transition: background-color 0.2s ease;
+  }
   &_invisible {
     background-color: transparent;
     box-shadow: none;
+    &:hover {
+      background-color: rgba(255, 255, 255, 0.2);
+      transition: background-color 0.3s ease;
+    }
   }
 }
