--- a/src/sass/blocks/_sidepanel.scss
+++ b/src/sass/blocks/_sidepanel.scss
@@ -6,9 +6,15 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  height: 390px;
+  height: 345px;
   z-index: 3;
   color: #fff;
+  &__link {
+    &:hover {
+      transform: scale(1.2);
+      transition: all 0.3s;
+    }
+  }
   &__divider {
     height: 75px;
     width: 2px;
@@ -17,6 +23,9 @@
   &__text {
     height: 150px;
     width: 25px;
+    text-shadow: -1px -1px 2px rgba(0, 0, 0, 0.5),
+      1px -1px 2px rgba(0, 0, 0, 0.5), -1px 1px 2px rgba(0, 0, 0, 0.5),
+      1px 1px 2px rgba(0, 0, 0, 0.5);
     span {
       transform: rotate(-90deg) translate(-33%, -260%);
       display: block;
