--- a/src/sass/blocks/_promo.scss
+++ b/src/sass/blocks/_promo.scss
@@ -1,7 +1,7 @@
 .promo {
   min-height: 100vh;
   position: relative;
-  background: url(../img/main_bg.jpg) no-repeat 50% / cover;
+  background: url(../img/main_bg.jpeg) no-repeat 50% / cover;
   padding: 210px;
   &__title {
     width: 535px;
