--- a/src/sass/blocks/_sidepanel.scss
+++ b/src/sass/blocks/_sidepanel.scss
@@ -1,31 +1,37 @@
 .sidepanel {
   position: fixed;
-  top: 230px;
+  top: 50%;
+  transform: translateY(-50%);
   left: 50px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  height: 345px;
+  height: 300px;
   z-index: 3;
   color: #fff;
   &__link {
+    opacity: 0.7;
+    transition: opacity 0.3s ease;
     &:hover {
-      transform: scale(1.2);
-      transition: all 0.3s;
+      opacity: 1;
     }
   }
   &__divider {
+    opacity: 0.9;
     height: 75px;
     width: 2px;
     background-color: #fff;
+    // box-shadow: -1px -1px 2px rgba(0, 0, 0, 0.5),
+    //   1px -1px 2px rgba(0, 0, 0, 0.5), -1px 1px 2px rgba(0, 0, 0, 0.5),
+    //   1px 1px 2px rgba(0, 0, 0, 0.5);
   }
   &__text {
     height: 150px;
     width: 25px;
-    text-shadow: -1px -1px 2px rgba(0, 0, 0, 0.5),
-      1px -1px 2px rgba(0, 0, 0, 0.5), -1px 1px 2px rgba(0, 0, 0, 0.5),
-      1px 1px 2px rgba(0, 0, 0, 0.5);
+    // text-shadow: -1px -1px 2px rgba(0, 0, 0, 0.5),
+    //   1px -1px 2px rgba(0, 0, 0, 0.5), -1px 1px 2px rgba(0, 0, 0, 0.5),
+    //   1px 1px 2px rgba(0, 0, 0, 0.5);
     span {
       transform: rotate(-90deg) translate(-33%, -260%);
       display: block;
