--- a/src/sass/blocks/_title.scss
+++ b/src/sass/blocks/_title.scss
@@ -2,6 +2,7 @@
   font-weight: bold;
   font-size: 36px;
   line-height: 60px;
+  color: #fff;
   &__fz16w {
     font-size: 16px;
     line-height: 25px;
@@ -18,6 +19,9 @@
   &__fz16 {
     font-size: 16px;
     line-height: 24px;
+  }
+  &__fz36 {
+    font-size: 36px;
   }
   &__fz48 {
     font-size: 48px;
