--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,13 +1,26 @@
 @import "libs/bootstrap-reboot.min";
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap");
+// @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap");
 
 @import "base/variables";
 @import "base/mixins";
 
 * {
-  font-family: "Poppins", sans-serif;
+  font-family: "Montserrat", sans-serif;
   margin: 0;
   padding: 0;
+}
+
+body {
+  background: repeating-linear-gradient(
+    45deg,
+    #708090,
+    #708090 10px,
+    #778899 10px,
+    #778899 20px
+  );
+
+  // background-color: #708090;
 }
 
 .container {
@@ -20,3 +33,4 @@
 @import "blocks/button";
 @import "blocks/sidepanel";
 @import "blocks/menu";
+@import "blocks/about";
