--- a/src/sass/blocks/_button.scss
+++ b/src/sass/blocks/_button.scss
@@ -4,7 +4,7 @@
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   padding: 12px 23px;
   &:hover {
-    background-color: #1c416d;
+    background-color: #533faa;
     transition: background-color 0.3s ease;
   }
   &_invisible {
