--- a/src/sass/blocks/_promo.scss
+++ b/src/sass/blocks/_promo.scss
@@ -1,7 +1,7 @@
 .promo {
   min-height: 100vh;
   position: relative;
-  background: url(../img/main_bg.jpeg) no-repeat 50% / cover;
+  background: url(../img/main_bg.jpg) no-repeat 50% / cover;
   padding: 210px;
   &__title {
     width: 535px;
@@ -9,7 +9,8 @@
   }
   &__subtitle {
     position: relative;
-    padding-left: 15px;
+    padding-left: 9px;
+    padding-top: 1px;
     @include before_cirle;
     z-index: 2;
   }
