--- a/src/sass/blocks/_about.scss
+++ b/src/sass/blocks/_about.scss
@@ -1,12 +1,13 @@
 .about {
+  min-height: 100vh;
   padding-top: 120px;
   &__wrapper {
     display: grid;
     grid-template-columns: 300px 670px;
-    grid-template-rows: minmax(245px, auto) minmax(240px, auto);
-    grid-auto-rows: minmax(245px, auto);
+    // grid-template-rows: minmax(240px, auto)  minmax(240px, auto);
+    // grid-auto-rows: minmax(245px, auto);
     column-gap: 70px;
-    row-gap: 40px;
+    row-gap: 70px;
   }
   &__text {
     margin-top: 20px;
@@ -16,7 +17,7 @@
     color: #c0c0c0;
   }
   &__photo {
-    grid-row: 1/3;
+    grid-row: 1/2;
     img {
       width: 100%;
       // height: 100%;
@@ -40,10 +41,10 @@
   }
   &__skills {
     display: grid;
-    grid-template: repeat(2, minmax(115px, auto)) / repeat(2, 280px);
+    grid-template: repeat(2, minmax(115px, auto)) / repeat(3, 280px);
     grid-auto-rows: 1fr;
-    column-gap: 65px;
-    row-gap: 20px;
+    column-gap: 100px;
+    row-gap: 25px;
     &-item {
       border-radius: 15px;
       padding: 15px;
