end of the 87th lesson 15.06.2023 PORTFOLIO section added

--- a/src/sass/base/_keyframes.scss
+++ b/src/sass/base/_keyframes.scss
@@ -27,3 +27,18 @@
     left: 25%;
   }
 }
+
+@keyframes moveLinePortfolio {
+  0% {
+    left: 41%;
+  }
+  50% {
+    left: 54%;
+  }
+  51% {
+    left: 54%;
+  }
+  100% {
+    left: 41%;
+  }
+}
