--- a/src/sass/blocks/_about.scss
+++ b/src/sass/blocks/_about.scss
@@ -1,5 +1,5 @@
 .about {
-  min-height: 100vh;
+  // min-height: 100vh;
   padding-top: 120px;
   &__wrapper {
     display: grid;
@@ -41,10 +41,10 @@
   }
   &__skills {
     display: grid;
-    grid-template: repeat(2, minmax(115px, auto)) / repeat(3, 280px);
-    grid-auto-rows: 1fr;
+    grid-template: repeat(1, minmax(115px, auto)) / repeat(3, 280px);
+    grid-auto-rows: 165px;
     column-gap: 100px;
-    row-gap: 25px;
+    row-gap: 40px;
     &-item {
       border-radius: 15px;
       padding: 15px;
