end of the 88th lesson need to change photo in contacts

--- a/src/sass/base/_keyframes.scss
+++ b/src/sass/base/_keyframes.scss
@@ -42,3 +42,18 @@
     left: 41%;
   }
 }
+
+@keyframes moveLineContacts {
+  0% {
+    left: 0%;
+  }
+  50% {
+    left: 20%;
+  }
+  51% {
+    left: 20%;
+  }
+  100% {
+    left: 0%;
+  }
+}
