--- a/src/sass/blocks/_about.scss
+++ b/src/sass/blocks/_about.scss
@@ -2,12 +2,19 @@
   // min-height: 100vh;
   padding-top: 120px;
   &__wrapper {
+    // display: grid;
+    // grid-template-columns: 300px 670px;
+    // // grid-template-rows: minmax(240px, auto)  minmax(240px, auto);
+    // // grid-auto-rows: minmax(245px, auto);
+    // column-gap: 70px;
+    // row-gap: 70px;
+
     display: grid;
-    grid-template-columns: 300px 670px;
-    // grid-template-rows: minmax(240px, auto)  minmax(240px, auto);
-    // grid-auto-rows: minmax(245px, auto);
+    grid-template-columns: 400px 635px;
+    grid-template-rows: minmax(245px, auto) minmax(255px, auto);
+    grid-auto-rows: minmax(245px, auto);
     column-gap: 70px;
-    row-gap: 70px;
+    row-gap: 40px;
   }
   &__text {
     margin-top: 20px;
@@ -17,9 +24,11 @@
     color: #c0c0c0;
   }
   &__photo {
-    grid-row: 1/2;
+    // padding-top: 150px;
+    grid-row: 1/3;
     img {
       width: 100%;
+      // height: 100%;
       // height: 100%;
       // filter: brightness(0.8);
       // border-radius: 1%;
@@ -40,18 +49,24 @@
     color: #f2f1f3;
   }
   &__skills {
-    display: grid;
-    grid-template: repeat(1, minmax(115px, auto)) / repeat(3, 280px);
+    // display: grid;
+    // grid-template: repeat(1, minmax(115px, auto)) / repeat(3, 280px);
     grid-auto-rows: 165px;
     column-gap: 100px;
     row-gap: 40px;
+    display: grid;
+    grid-template: repeat(2, minmax(115px, auto)) / repeat(2, 260px);
+    // grid-auto-rows: 1fr;
+    // column-gap: 50px;
+    // row-gap: 20px;
     &-item {
       border-radius: 15px;
-      padding: 15px;
+      padding: 8px;
       display: grid;
       grid-template-columns: 40px 200px;
-      column-gap: 10px;
-      box-shadow: 0 0 15px #fff;
+      box-shadow: 0 0 10px #fff;
+      justify-content: space-around;
+      align-items: center;
     }
     &-text {
       margin-top: 6px;
