--- a/src/sass/blocks/_contacts.scss
+++ b/src/sass/blocks/_contacts.scss
@@ -7,11 +7,14 @@
     justify-content: space-between;
   }
   &__photo {
-    img {
-      margin-top: 139px;
+    margin: 120px 0 100px 0;
+    border-radius: 100%;
+    background-color: rgba(49, 43, 93, 0.4);
+    filter: brightness(1.8);
+    svg {
+      margin-top: 100px;
       width: 100%;
       // height: 100%;
-      // filter: brightness(0.8);
       // border-radius: 1%;
     }
   }
@@ -65,6 +68,22 @@
       padding: 0 8px;
       background-color: #181626;
       font-size: 12px;
+    }
+  }
+  &__triggers {
+    grid-column: 1 / 3;
+    display: grid;
+    grid-template-columns: repeat(2, auto);
+    column-gap: 35px;
+  }
+  &__policy {
+    display: flex;
+    align-items: center;
+    font-size: 12px;
+    line-height: 14px;
+    font-weight: 500;
+    input {
+      margin-right: 10px;
     }
   }
   &__input {
