--- a/src/sass/blocks/_promo.scss
+++ b/src/sass/blocks/_promo.scss
@@ -2,7 +2,7 @@
   min-height: 100vh;
   position: relative;
   background: url(../img/main_bg.jpg) no-repeat 50% / cover;
-  padding: 210px;
+  padding-top: 210px;
   &__title {
     width: 535px;
     margin-top: 10px;
