--- a/src/sass/blocks/_media.scss
+++ b/src/sass/blocks/_media.scss
@@ -26,16 +26,54 @@
   }
   .skills {
     &__items {
-      grid-template-columns: repeat(2, 270px);
-      grid-template-rows: repeat(2, 270px);
+      grid-template-columns: repeat(auto-fit, 270px);
       grid-auto-rows: 270px;
       justify-content: space-around;
       row-gap: 50px;
     }
     &__item {
-      grid-template-columns: repeat(2, 350px);
-      grid-template-rows: repeat(3, 70px);
+      grid-template-columns: repeat(auto-fit, 350px);
+      grid-auto-rows: 70px;
       justify-content: center;
+    }
+  }
+  .portfolio {
+    &__wrapper {
+      grid-template-columns: repeat(auto-fit, 280px);
+      grid-auto-rows: 280px;
+      row-gap: 35px;
+      justify-content: space-around;
+      .horizontal,
+      .vertical {
+        grid-row: unset;
+        grid-column: unset;
+      }
+    }
+  }
+  @keyframes moveLinePortfolio {
+    0% {
+      left: 40%;
+    }
+    50% {
+      left: 54%;
+    }
+    51% {
+      left: 54%;
+    }
+    100% {
+      left: 40%;
+    }
+  }
+  .contacts {
+    &__wrapper {
+      justify-content: center;
+      grid-template-columns: none;
+    }
+    &__photo {
+      display: none;
+    }
+    &__form {
+      column-gap: 25px;
     }
   }
 }
@@ -62,6 +100,20 @@
       &-item {
         justify-content: space-around;
       }
+    }
+  }
+  @keyframes moveLinePortfolio {
+    0% {
+      left: 37%;
+    }
+    50% {
+      left: 55%;
+    }
+    51% {
+      left: 55%;
+    }
+    100% {
+      left: 37%;
     }
   }
 }
@@ -101,6 +153,9 @@
         justify-content: space-between;
       }
     }
+    .portfolio {
+      padding-top: 40px;
+    }
   }
 
   @keyframes moveLineAbout {
@@ -119,14 +174,13 @@
   }
   .skills {
     &__items {
-      grid-template-columns: repeat(2, 270px);
-      grid-template-rows: repeat(2, 270px);
+      grid-template-columns: repeat(auto-fit, 270px);
       grid-auto-rows: 270px;
       row-gap: 30px;
     }
     &__item {
-      grid-template-columns: repeat(1, 350px);
-      grid-template-rows: repeat(6, 70px);
+      grid-template-columns: repeat(auto-fit, 350px);
+      grid-auto-rows: 70px;
       justify-content: center;
     }
   }
@@ -143,6 +197,47 @@
     }
     100% {
       left: 6%;
+    }
+  }
+  @keyframes moveLinePortfolio {
+    0% {
+      left: 35%;
+    }
+    50% {
+      left: 54%;
+    }
+    51% {
+      left: 54%;
+    }
+    100% {
+      left: 35%;
+    }
+  }
+  .contacts {
+    &__wrapper {
+      justify-content: center;
+    }
+    &__photo {
+      display: none;
+    }
+    &__form {
+      column-gap: 25px;
+      grid-template: 40px 190px 40px / repeat(2, 250px);
+    }
+  }
+
+  @keyframes moveLineContacts {
+    0% {
+      left: -1%;
+    }
+    50% {
+      left: 35%;
+    }
+    51% {
+      left: 35%;
+    }
+    100% {
+      left: -1%;
     }
   }
 }
@@ -213,14 +308,13 @@
 
   .skills {
     &__items {
-      grid-template-columns: repeat(1, 270px);
-      grid-template-rows: repeat(4, 270px);
+      grid-template-columns: repeat(auto-fit, 270px);
       grid-auto-rows: 270px;
       row-gap: 30px;
     }
     &__item {
-      grid-template-columns: repeat(1, 300px);
-      grid-template-rows: repeat(6, 70px);
+      grid-template-columns: repeat(auto-fit, 300px);
+      grid-auto-rows: 70px;
       justify-content: center;
       &-line {
         width: 300px;
@@ -243,6 +337,64 @@
     }
     100% {
       left: 2%;
+    }
+  }
+  @keyframes moveLinePortfolio {
+    0% {
+      left: 28%;
+    }
+    50% {
+      left: 53%;
+    }
+    51% {
+      left: 53%;
+    }
+    100% {
+      left: 28%;
+    }
+  }
+
+  .contacts {
+    padding-bottom: 50px;
+    &__form {
+      grid-template: 45px 45px 190px minmax(45px, auto) / 1fr;
+    }
+    &__textarea {
+      grid-column: unset;
+      width: 100%;
+    }
+    &__triggers {
+      grid-column: unset;
+      grid-template-columns: 1fr;
+      column-gap: unset;
+      row-gap: 20px;
+    }
+    &__btn {
+      order: 2;
+      max-width: 220px;
+      margin: 0 auto;
+      font-size: 14px;
+      padding: 5px;
+    }
+    &__policy {
+      width: 180px;
+      margin: 0 auto;
+      line-height: 18px;
+    }
+  }
+
+  @keyframes moveLineContacts {
+    0% {
+      left: -1%;
+    }
+    50% {
+      left: 61%;
+    }
+    51% {
+      left: 61%;
+    }
+    100% {
+      left: -1%;
     }
   }
 }
