--- a/src/sass/blocks/_portfolio.scss
+++ b/src/sass/blocks/_portfolio.scss
@@ -6,8 +6,8 @@
     display: grid;
     grid-template: repeat(2, 280px) / repeat(4, 280px);
     grid-auto-rows: 280px;
-    row-gap: 5px;
-    column-gap: 5px;
+    row-gap: 7px;
+    column-gap: 7px;
     .vertical {
       grid-row: 1 / 3;
       grid-column: 4 / 5;
@@ -21,6 +21,8 @@
     transition: all 0.4s;
     img {
       width: 100%;
+      height: 100%;
+      object-fit: cover;
     }
     &:hover {
       transform: scale(1.05);
