--- a/src/sass/blocks/_contacts.scss
+++ b/src/sass/blocks/_contacts.scss
@@ -7,12 +7,13 @@
     justify-content: space-between;
   }
   &__photo {
-    margin: 120px 0 100px 0;
+    // margin: 120px 0 100px 0;
+    padding: 80px;
     border-radius: 100%;
     background-color: rgba(49, 43, 93, 0.4);
     filter: brightness(1.8);
     svg {
-      margin-top: 100px;
+      // margin-top: 100px;
       width: 100%;
       // height: 100%;
       // border-radius: 1%;
